==> linkaiqin/USB-Wireless-LAN-Driver-for-STM32F4xx/EvalBoards/ST/STM32F4-Discovery/BSP/bsp_ser.c <==
#define  BSP_SER_MODULE
#include <bsp.h>
#include <bsp_ser.h>
#include "bmd.h"
#include "stdio.h"
#include "string.h"
#include "memory.h"
#include "shell.h"
#define  BSP_SER_PRINTF_STR_BUF_SIZE             80u
#define  SERIAL_RX_BUFFER_SIZE  80
#define  SERIAL_TX_BUFFER_SIZE  1024

void  BSP_Ser_Init ()
{
    GPIO_InitTypeDef        GPIO_InitStructure;
    USART_InitTypeDef       USART_InitStructure;
    USART_ClockInitTypeDef  USART_CLK_InitStructure;


    /* ------------------ INIT OS OBJECTS ----------------- */
    BSP_OS_SemCreate(&BSP_SerTxWait,   1, "Serial Tx Wait");
    BSP_OS_SemCreate(&BSP_SerRxWait,   0, "Serial Rx Wait");
    BSP_OS_SemCreate(&BSP_SerLock,     1, "Serial Lock");

    /* ----------------- INIT USART STRUCT ---------------- */
    USART_InitStructure.USART_BaudRate            = BSP_SER_COMM_BAUDRATE;
    USART_InitStructure.USART_WordLength          = USART_WordLength_8b;
    USART_InitStructure.USART_StopBits            = USART_StopBits_1;
    USART_InitStructure.USART_Parity              = USART_Parity_No ;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode                = USART_Mode_Rx | USART_Mode_Tx;

    USART_CLK_InitStructure.USART_Clock           = USART_Clock_Disable;
    USART_CLK_InitStructure.USART_CPOL            = USART_CPOL_Low;
    USART_CLK_InitStructure.USART_CPHA            = USART_CPHA_2Edge;
    USART_CLK_InitStructure.USART_LastBit         = USART_LastBit_Disable;


    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);       /* Enable GPIO clock.                                   */
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);      /* Enable UART clock.                                   */


    /* ----------------- SETUP USART2 GPIO ---------------- */
    /* Configure GPIOC.5 as push-pull.                      */
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_2;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource2, GPIO_AF_USART2);

    /* Configure GPIOD.6 as input floating.                 */
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_3;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource3, GPIO_AF_USART2);


    Buf_init(&rx_buf_ring,rx_buffer,sizeof(rx_buffer));

    /* ------------------ SETUP USART2 -------------------- */
    USART_Init(USART2, &USART_InitStructure);
    USART_ClockInit(USART2, &USART_CLK_InitStructure);
    USART_Cmd(USART2, ENABLE);
    USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);

    BSP_IntVectSet(BSP_INT_ID_USART2, BSP_Ser_ISR_Handler);
    BSP_IntEn(BSP_INT_ID_USART2);



#ifdef USE_BUF_PRINTF
    Buf_init(&tx_buf_ring,tx_buffer,sizeof(tx_buffer));
    BSP_OS_SemCreate(&BSP_SerTxBufWait,   0, "BSP_SerTxBufWait");
#endif
}

void  BSP_Ser_ISR_Handler (void)
{
    CPU_REG32  status;
    CPU_INT08U ret,rx_byte;


    status = USART2->SR;

    if (DEF_BIT_IS_SET(status, DEF_BIT_05))
    {
        rx_byte = USART_ReceiveData(USART2) & 0xFF;       /* Read one byte from the receive data register.      */
        Buf_IsFull(&rx_buf_ring, ret);
        if(ret == Buff_notFull)
            Buf_Push(&rx_buf_ring, rx_byte);

        USART_ClearITPendingBit(USART2, USART_IT_RXNE);         /* Clear the USART2 receive interrupt.                */
        BSP_OS_SemPost(&BSP_SerRxWait);                         /* Post to the sempahore                              */
    }

    if (DEF_BIT_IS_SET(status, DEF_BIT_07))
    {
        USART_ITConfig(USART2, USART_IT_TXE, DISABLE);
//        USART_ClearITPendingBit(USART2, USART_IT_TXE);          /* Clear the USART2 receive interrupt.                */
        BSP_OS_SemPost(&BSP_SerTxWait);                         /* Post to the semaphore                              */
    }

}
