==> varzhou/3GModem-for-Stm32/EvalBoards/ST/STM32469I-Discovery/BSP/bsp_ser.c <==
#define  BSP_SER_MODULE
#include <bsp.h>
#include <bsp_os.h>
#include <bsp_ser.h>
#include "stm32f4xx_hal.h"
#include "stm32469i_discovery_lcd.h"
#include "bmd.h"
#include "stdio.h"
#include "string.h"
#include "shell.h"
#define  USE_USART3
#define USE_BUF_PRINTF
#define  BSP_SER_COMM_BAUDRATE            115200
#define  SERIAL_RX_BUFFER_SIZE            80
#define  SERIAL_TX_BUFFER_SIZE            4*1024
#define FINSH_USING_HISTORY
#define FINSH_HISTORY_LINES 5
#define FINSH_CMD_SIZE      160
#define FINSH_PROMPT      ">"
#define rt_kprintf printf
#define rt_strlen strlen

void  BSP_Ser_ISR_Handler (void)
{
    CPU_REG32  status;
    CPU_INT08U ret,rx_byte;


    status = UartHandle.Instance->SR;

    if (DEF_BIT_IS_SET(status, DEF_BIT_05))
    {
        rx_byte = UartHandle.Instance->DR & 0xFF;       /* Read one byte from the receive data register.      */
        Buf_IsFull(&rx_buf_ring, ret);
        if(ret == Buff_notFull)
            Buf_Push(&rx_buf_ring, rx_byte);

        __HAL_UART_CLEAR_FLAG(&UartHandle, UART_FLAG_RXNE);
        BSP_OS_SemPost(&BSP_SerRxWait);                         /* Post to the sempahore                              */
    }

    if (DEF_BIT_IS_SET(status, DEF_BIT_07))
    {
        __HAL_UART_DISABLE_IT(&UartHandle, USART_IT_TXE);
        BSP_OS_SemPost(&BSP_SerTxWait);                         /* Post to the semaphore                              */
    }

}

void  BSP_Ser_Init ()
{
    GPIO_InitTypeDef        GPIO_InitStruct;
    OS_ERR err;


    lcd_terminal_init(0,0,800,480);

    SerRxDisable=0;
    
    Buf_init(&rx_buf_ring,rx_buffer,sizeof(rx_buffer));


    /* ------------------ INIT OS OBJECTS ----------------- */
    BSP_OS_SemCreate(&BSP_SerTxWait,   1, "Serial Tx Wait");
    BSP_OS_SemCreate(&BSP_SerRxWait,   0, "Serial Rx Wait");

    /* ----------------- INIT USART STRUCT ---------------- */
    UartHandle.Init.BaudRate   = BSP_SER_COMM_BAUDRATE;
    UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
    UartHandle.Init.StopBits   = UART_STOPBITS_1;
    UartHandle.Init.Parity     = UART_PARITY_NONE;
    UartHandle.Init.HwFlowCtl  = UART_HWCONTROL_NONE;
    UartHandle.Init.Mode       = UART_MODE_TX_RX;

#ifdef USE_USART3
    __HAL_RCC_GPIOB_CLK_ENABLE();       /* Enable GPIO clock.                                   */
    __HAL_RCC_USART3_CLK_ENABLE();      /* Enable UART clock.                                   */

    /* ----------------- SETUP USART3 GPIO ---------------- */
    /* Configure GPIOB.10 as push-pull.                      */
    GPIO_InitStruct.Pin       = GPIO_PIN_10;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF7_USART3;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* Configure GPIOB.11 as input floating.                 */
    GPIO_InitStruct.Pin = GPIO_PIN_11;
    GPIO_InitStruct.Alternate = GPIO_AF7_USART3;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);


    /* ------------------ SETUP USART3 -------------------- */
    UartHandle.Instance        = USART3;
    if(HAL_UART_DeInit(&UartHandle) != HAL_OK)
    {
        while(1);
    }
    if(HAL_UART_Init(&UartHandle) != HAL_OK)
    {
        while(1);
    }
    /* Enable the UART Data Register not empty Interrupt */
    __HAL_UART_ENABLE_IT(&UartHandle, UART_IT_RXNE);


    BSP_IntVectSet(BSP_INT_ID_USART3, BSP_Ser_ISR_Handler);
    BSP_IntEn(BSP_INT_ID_USART3);
#endif

#ifdef USE_USART6
    __HAL_RCC_GPIOC_CLK_ENABLE();       /* Enable GPIO clock.                                   */
    __HAL_RCC_USART6_CLK_ENABLE();      /* Enable UART clock.                                   */

    /* ----------------- SETUP USART3 GPIO ---------------- */
    /* Configure GPIOC.6 as push-pull.                      */
    GPIO_InitStruct.Pin       = GPIO_PIN_6;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF8_USART6;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

    /* Configure GPIOC.7 as input floating.                 */
    GPIO_InitStruct.Pin = GPIO_PIN_7;
    GPIO_InitStruct.Alternate = GPIO_AF8_USART6;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);


    /* ------------------ SETUP USART6 -------------------- */
    UartHandle.Instance        = USART6;
    if(HAL_UART_DeInit(&UartHandle) != HAL_OK)
    {
        while(1);
    }
    if(HAL_UART_Init(&UartHandle) != HAL_OK)
    {
        while(1);
    }
    /* Enable the UART Data Register not empty Interrupt */
    __HAL_UART_ENABLE_IT(&UartHandle, UART_IT_RXNE);


    BSP_IntVectSet(BSP_INT_ID_USART6, BSP_Ser_ISR_Handler);
    BSP_IntEn(BSP_INT_ID_USART6);
#endif


#ifdef USE_BUF_PRINTF
    Buf_init(&tx_buf_ring,tx_buffer,sizeof(tx_buffer));
#endif

    OSTaskCreate((OS_TCB       *)&BspSerTaskTCB,              /* Create the start task                                */
                 (CPU_CHAR     *)"BSP Serial Task",
                 (OS_TASK_PTR   )BSP_Ser_Task,
                 (void         *)0u,
                 (OS_PRIO       )BSP_SER_TASK_PRIO,
                 (CPU_STK      *)&BspSerTaskStk[0u],
                 (CPU_STK_SIZE  )BSP_SER_TASK_STK_SIZE / 10u,
                 (CPU_STK_SIZE  )BSP_SER_TASK_STK_SIZE,
                 (OS_MSG_QTY    )0u,
                 (OS_TICK       )0u,
                 (void         *)0u,
                 (OS_OPT        )(OS_OPT_TASK_STK_CHK | OS_OPT_TASK_STK_CLR),
                 (OS_ERR       *)&err);

}
